Start organizing the score/rounds remaining section.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>TOP: Rock, Paper, Scissors Project</title>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>Rock, Paper, Scissors!</header>
@@ -63,7 +64,6 @@
       <button class="btn" id="paper">Scissors</button>
     </div>
   </main>
-
 
   <script src="script.js"></script>
 </body>
