Improve spacing in scoreboard area.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <main>
     <div id="scores">
 
-      <div id="your-score">
+      <div class="score-container" id="your-score">
         <h2 class="competitor" id="you">You</h2>
         <div class="record" id="you">
           <div class="wins" id="you">
@@ -28,12 +28,12 @@
         </div>
       </div>
 
-      <div id="rounds-remaining">
+      <div class="score-container" id="rounds-remaining">
         <h1 id="rounds">Rounds Remaining</h1>
         <p id="rounds-number">5</p>
       </div>
 
-      <div id="computer-score">
+      <div class="score-container" id="computer-score">
         <h2 class="competitor" id="computer">Computer</h2>
         <div class="record" id="computer">
           <div class="wins" id="computer">
