Add basic button functionality.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <div id="faceoff">
       <img src="pics/rock.jpg" alt="Your play" id="your-img">
       <div id="choices">
-        <p id="faceoff-message">Placeholder message</p>
+        <p id="faceoff-message">Make your move!</p>
         <div id="button-group">
           <button class="btn" id="rock">Rock</button>
           <button class="btn" id="paper">Paper</button>
-          <button class="btn" id="paper">Scissors</button>
+          <button class="btn" id="scissors">Scissors</button>
         </div>
       </div>
       <img src="pics/paper.jpg" alt="Computer play" id="computer-img">
