Add default pic, add a changePicture function.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     </div>
 
     <div id="faceoff">
-      <img src="pics/rock.jpg" alt="Your play" id="your-img">
+      <img src="pics/default.jpg" alt="Your play" id="your-img">
       <div id="choices">
+        <p id="outcome-message"></p>
         <p id="faceoff-message">Make your move!</p>
         <div id="button-group">
           <button class="btn" id="rock">Rock</button>
@@ -62,7 +63,7 @@
           <button class="btn" id="scissors">Scissors</button>
         </div>
       </div>
-      <img src="pics/paper.jpg" alt="Computer play" id="computer-img">
+      <img src="pics/default.jpg" alt="Computer play" id="computer-img">
     </div>
 
   </main>
