Fix outcome messages, add functional scoreboard.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <div class="record" id="you">
           <div class="wins" id="you">
             <p class="outcome" id="you">W</p>
-            <p class="number" id="you">0</p>
+            <p class="number" id="your-wins">0</p>
           </div>
           <div class="losses" id="you">
             <p class="outcome" id="you">L</p>
-            <p class="number" id="you">0</p>
+            <p class="number" id="your-losses">0</p>
           </div>
           <div class="ties" id="you">
             <p class="outcome" id="you">T</p>
-            <p class="number" id="you">0</p>
+            <p class="number" id="your-ties">0</p>
           </div>
         </div>
       </div>
@@ -38,15 +38,15 @@
         <div class="record" id="computer">
           <div class="wins" id="computer">
             <p class="outcome" id="computer">W</p>
-            <p class="number" id="computer">0</p>
+            <p class="number" id="computer-wins">0</p>
           </div>
           <div class="losses" id="computer">
             <p class="outcome" id="computer">L</p>
-            <p class="number" id="computer">0</p>
+            <p class="number" id="computer-losses">0</p>
           </div>
           <div class="ties" id="computer">
             <p class="outcome" id="computer">T</p>
-            <p class="number" id="computer">0</p>
+            <p class="number" id="computer-ties">0</p>
           </div>
         </div>
       </div>
